# Dron_symulacja

./: .gitignore  .gitmodules  README.md  TODO  new_ideas.py  new_ideas_2.py
.cursor/: worktrees.json
.github/: copilot-instructions.md
docker/: .setup_container_gpu.sh.swp  Dockerfile  build_and_run.sh  dockerise_cmd.sh  run_ardupilot_sitl.sh  run_aruco_mission.sh  run_camera.sh  run_microxrce.sh  run_px4_sitl.sh  run_simulation.sh  run_yolo_mission.sh  setup_container_cpu.sh  setup_container_gpu.sh  ttt.txt
docker_rpi/: Dockerfile  make_container.sh
docs/: KNRweb_deployment.md  KnownIssues.md  RasberryPI_podstawy_łączenia.md  ServoCalibReadMe.md  Start_Sim.md  aruco_simulator.md  aruco_simulator_instrukcja.md  camera_recorder.md  co_do_czego.md  coverage_node.md  detekcja_tracking namiotu.md  follow_aruco_centroid.md  gcs_config.md  gui_panel.md  gz_worlds.md  instrukcje.md  jak_zaczac.md  komendy.md  lidar_webots.md  microxrce_setup.md  obstacle_avoidance.md  projekt_kontekst.md  px4_sim_open.md  tent_color_cycle.md  tent_follower.md  topic_logger_node.md  yolo_detector.md  yolo_following_migracja_na_lidar_gz.md
models_and_word_px4_gz/: pole_z_beczkami.sdf
scrips_on_test/: launch_dev.sh
scripts/: KnownIssues.md  build_and_run.sh  dockerise_cmd.sh  run_ardupilot_sitl.sh  run_ardupilot_sitl_udp.sh  run_aruco_mission.sh  run_logger.sh  run_microxrce.sh  run_px4_quad_sitl.sh  (+5 more)
src/mqtt_telemetry/: package.xml  readme.md  setup.cfg  setup.py
src/mqtt_telemetry/mqtt_telemetry/: __init__.py  config.yaml  publish_image_dzialka.py  temp_socketio_file.py
(+272 files in other folders)
