<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mqtt_telemetry</name>
  <version>0.0.1</version>

  <description>ROS2 → MQTT bridge</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO</license>

  <!-- POPRAWIONE -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>paho-mqtt</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>rosidl-runtime-py</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
